cleanup debugger: fixed yellow code
GitOrigin-RevId: 46cce05f72275767f37bd7f81a05bddf1af950a1